Fixed overflow bug

--- a/src/input.css
+++ b/src/input.css
@@ -11,7 +11,3 @@
 .btn-purple {
   @apply bg-bookmark-purple text-white;
 }
-
-.btn-white {
-  @apply bg-bookmark-white;
-}
